--- a/lab1/5.md
+++ b/lab1/5.md
@@ -1,11 +1,10 @@
-## Experiment 5  
-**Question:**  
-Create Home, About Us, Products, Partners, Contact Us pages for a static e-commerce website using Bootstrap. Also, add a gallery page using the Bootstrap grid model, include Navbar, header, footer to all pages, and add a Login link (Modal).
+Below is a complete solution for Experiment 5. This experiment requires you to create a set of static e-commerce website pages using Bootstrap (Home, About Us, Products/Gallery, and Contact Us) that all share a common Navbar (with a Login modal), header, and footer. You can also create a “Partners” page in a similar fashion if needed.
 
-**Solution:**  
-In this experiment, multiple pages are created. Below are key examples. (You would create separate HTML files for each page.)
+For clarity, the solution is broken down by page. In a real project you’d save each code block as its own file (for example: index.html, aboutus.html, contactus.html, gallery.html). Be sure to include a CSS file (e.g., mystyle.css) for any additional custom styling that you require.
 
-### **Index.html (Home Page)**
+---
+
+### **1. Home Page (index.html)**
 
 ```html
 <!DOCTYPE html>
@@ -30,7 +29,9 @@ In this experiment, multiple pages are created. Below are key examples. (You wou
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand mr-auto" href="#"><img src="imgs/logo.png" width="85%" height="65%"></a>
+      <a class="navbar-brand mr-auto" href="index.html">
+        <img src="imgs/logo.png" width="85%" height="65%" alt="Logo">
+      </a>
       <div class="collapse navbar-collapse" id="Navbar">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active"><a class="nav-link" href="index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
@@ -44,51 +45,184 @@ In this experiment, multiple pages are created. Below are key examples. (You wou
       </span>
     </div>
   </nav>
-  
+
   <!-- Login Modal -->
-  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-header text-center">
-          <h4 class="modal-title w-100 font-weight-bold">Login</h4>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body mx-1">
-          <div class="md-form mb-1">
-            <i class="fas fa-envelope prefix grey-text"></i>
-            <input type="email" id="defaultForm-email" class="form-control validate">
-            <label data-error="wrong" data-success="right" for="defaultForm-email">Your email</label>
-          </div>
-          <div class="md-form mb-1">
-            <i class="fas fa-lock prefix grey-text"></i>
-            <input type="password" id="defaultForm-pass" class="form-control validate">
-            <label data-error="wrong" data-success="right" for="defaultForm-pass">Your password</label>
-          </div>
-        </div>
-        <div class="modal-footer d-flex justify-content-center">
-          <button class="btn btn-default">Login</button>
-        </div>
+         <div class="modal-header text-center">
+            <h4 class="modal-title w-100 font-weight-bold">Login</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+         </div>
+         <div class="modal-body mx-1">
+            <div class="md-form mb-1">
+              <i class="fas fa-envelope prefix grey-text"></i>
+              <input type="email" id="defaultForm-email" class="form-control validate">
+              <label for="defaultForm-email">Your email</label>
+            </div>
+            <div class="md-form mb-1">
+              <i class="fas fa-lock prefix grey-text"></i>
+              <input type="password" id="defaultForm-pass" class="form-control validate">
+              <label for="defaultForm-pass">Your password</label>
+            </div>
+         </div>
+         <div class="modal-footer d-flex justify-content-center">
+            <button class="btn btn-default">Login</button>
+         </div>
       </div>
     </div>
   </div>
 
-  <!-- Home page header image -->
+  <!-- Home Page Header/Image -->
   <div class="container" style="margin-top:100px;">
     <div class="row">
-      <img src="imgs/home3.jpg" width="100%" alt="Home Banner">
+      <img src="imgs/home3.jpg" class="img-fluid" alt="Home Banner">
     </div>
   </div>
-  
+
   <!-- Footer -->
-  <footer class="footer text-center">
+  <footer class="footer text-center mt-4">
     <div class="container">
       <div class="row">
-        <!-- Footer content as needed -->
+        <!-- Footer Location -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h5>Location</h5>
-          <p class="lead">27 Jane Street, John Doe<br>TS 5000027</p>
+          <p class="lead mb-0">
+            27 Jane Street, John Doe<br>
+            TS 5000027
+          </p>
+        </div>
+        <!-- Footer Social Icons -->
+        <div class="col-lg-4 mb-5 mb-lg-0">
+          <h5>Around the Web</h5>
+          <a class="btn btn-outline-light btn-social mx-1" href="#!">
+            <i class="fab fa-fw fa-facebook-f"></i>
+          </a>
+          <a class="btn btn-outline-light btn-social mx-1" href="#!">
+            <i class="fab fa-fw fa-twitter"></i>
+          </a>
+          <a class="btn btn-outline-light btn-social mx-1" href="#!">
+            <i class="fab fa-fw fa-linkedin-in"></i>
+          </a>
+        </div>
+        <!-- Footer About -->
+        <div class="col-lg-4">
+          <h5>About</h5>
+          <p class="lead mb-0">BuyBest</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <div class="copyright py-4 text-center text-white">
+    <div class="container">
+      <small>Copyright © John Doe 2022</small>
+    </div>
+  </div>
+</body>
+</html>
+```
+
+---
+
+### **2. About Us Page (aboutus.html)**
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Buy Best! - About Us</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+  <link href="css/mystyle.css" rel="stylesheet">
+  <!-- Font Awesome icons -->
+  <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+</head>
+<body>
+  <!-- Navbar (same as home page) -->
+  <nav class="navbar navbar-dark navbar-expand-sm fixed-top" style="background-color: darkblue;">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand mr-auto" href="index.html">
+        <img src="imgs/logo.png" width="85%" height="65%" alt="Logo">
+      </a>
+      <div class="collapse navbar-collapse" id="Navbar">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
+          <li class="nav-item active"><a class="nav-link" href="aboutus.html"><span class="fa fa-list fa-lg"></span> About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="gallery.html"><span class="fa fa-info fa-lg"></span> Products</a></li>
+          <li class="nav-item"><a class="nav-link" href="contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact Us</a></li>
+        </ul>
+      </div>
+      <span class="navbar-text">
+        <a data-toggle="modal" data-target="#loginModal"><span class="fa fa-sign-in"></span> Login</a>
+      </span>
+    </div>
+  </nav>
+
+  <!-- Login Modal (same as in home page) -->
+  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+         <div class="modal-header text-center">
+            <h4 class="modal-title w-100 font-weight-bold">Login</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+         </div>
+         <div class="modal-body mx-1">
+            <div class="md-form mb-1">
+              <i class="fas fa-envelope prefix grey-text"></i>
+              <input type="email" id="defaultForm-email" class="form-control validate">
+              <label for="defaultForm-email">Your email</label>
+            </div>
+            <div class="md-form mb-1">
+              <i class="fas fa-lock prefix grey-text"></i>
+              <input type="password" id="defaultForm-pass" class="form-control validate">
+              <label for="defaultForm-pass">Your password</label>
+            </div>
+         </div>
+         <div class="modal-footer d-flex justify-content-center">
+            <button class="btn btn-default">Login</button>
+         </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- About Us Content -->
+  <div class="container" style="margin-top:100px;">
+    <div class="row">
+      <div class="col-12 col-sm-10 mt-4">
+        <p>
+          Welcome to BuyBest, your number one source for all phones and gadgets.
+          We are dedicated to giving you the very best with a focus on dependability,
+          customer service and uniqueness. Founded in 2019, BuyBest began in a small home office
+          in Hyderabad, TS and has grown significantly to serve customers throughout the region.
+        </p>
+        <p>
+          Our passion for providing exceptional products drives us to continuously research
+          and deliver the latest innovations in the gadgets industry.
+        </p>
+        <p>Sincerely,<br>Chaithra R,<br>CEO</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer (same as home page) -->
+  <footer class="footer text-center mt-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 mb-5 mb-lg-0">
+          <h5>Location</h5>
+          <p class="lead mb-0">27 Jane Street, John Doe<br>TS 5000027</p>
         </div>
         <div class="col-lg-4 mb-5 mb-lg-0">
           <h5>Around the Web</h5>
@@ -98,23 +232,305 @@ In this experiment, multiple pages are created. Below are key examples. (You wou
         </div>
         <div class="col-lg-4">
           <h5>About</h5>
-          <p class="lead">BuyBest</p>
+          <p class="lead mb-0">BuyBest</p>
         </div>
       </div>
     </div>
   </footer>
   <div class="copyright py-4 text-center text-white">
-    <div class="container"><small>Copyright © John Doe 2022</small></div>
+    <div class="container">
+      <small>Copyright © John Doe 2022</small>
+    </div>
   </div>
 </body>
 </html>
 ```
 
-### **Aboutus.html, Contactus.html, Gallery.html**  
-You would create similar structures for the remaining pages. For example, **Aboutus.html** includes a description of the company, **Contactus.html** has a contact form, and **Gallery.html** uses the Bootstrap grid (with rows and columns) to display a set of product images.
+---
 
-*Expected Output:*  
-A static e-commerce website with a consistent Navbar (including a Login modal), header images, separate pages for Home, About Us, Products, and Contact Us, plus a gallery page showing product images arranged in a grid.
+### **3. Contact Us Page (contactus.html)**
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Buy Best! - Contact Us</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+  <link href="css/mystyle.css" rel="stylesheet">
+  <!-- Font Awesome icons -->
+  <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+</head>
+<body>
+  <!-- Navbar (same as others) -->
+  <nav class="navbar navbar-dark navbar-expand-sm fixed-top" style="background-color: darkblue;">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand mr-auto" href="index.html">
+        <img src="imgs/logo.png" width="85%" height="65%" alt="Logo">
+      </a>
+      <div class="collapse navbar-collapse" id="Navbar">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="aboutus.html"><span class="fa fa-list fa-lg"></span> About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="gallery.html"><span class="fa fa-info fa-lg"></span> Products</a></li>
+          <li class="nav-item active"><a class="nav-link" href="contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact Us</a></li>
+        </ul>
+      </div>
+      <span class="navbar-text">
+        <a data-toggle="modal" data-target="#loginModal"><span class="fa fa-sign-in"></span> Login</a>
+      </span>
+    </div>
+  </nav>
+
+  <!-- Login Modal (same as others) -->
+  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+         <div class="modal-header text-center">
+            <h4 class="modal-title w-100 font-weight-bold">Login</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+         </div>
+         <div class="modal-body mx-1">
+            <div class="md-form mb-1">
+              <i class="fas fa-envelope prefix grey-text"></i>
+              <input type="email" id="defaultForm-email" class="form-control validate">
+              <label for="defaultForm-email">Your email</label>
+            </div>
+            <div class="md-form mb-1">
+              <i class="fas fa-lock prefix grey-text"></i>
+              <input type="password" id="defaultForm-pass" class="form-control validate">
+              <label for="defaultForm-pass">Your password</label>
+            </div>
+         </div>
+         <div class="modal-footer d-flex justify-content-center">
+            <button class="btn btn-default">Login</button>
+         </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Contact Us Content -->
+  <div class="container" style="margin-top:100px;">
+    <div class="row">
+      <div class="col-12 col-sm-10 mt-4">
+        <h3 class="display-4">Contact Us</h3>
+        <div id="conform">
+          <form action="mailto:janedoe@geemail.com" method="POST" enctype="text/plain" name="EmailForm">
+            <strong>Name:</strong><br>
+            <input type="text" size="40" name="ContactName"><br>
+            <strong>Message:</strong><br>
+            <textarea name="ContactComment" rows="6" cols="40"></textarea><br>
+            <input type="submit" value="Submit">
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer (same as others) -->
+  <footer class="footer text-center mt-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 mb-5 mb-lg-0">
+          <h5>Location</h5>
+          <p class="lead mb-0">27 Jane Street, John Doe<br>TS 5000027</p>
+        </div>
+        <div class="col-lg-4 mb-5 mb-lg-0">
+          <h5>Around the Web</h5>
+          <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
+          <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
+          <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
+        </div>
+        <div class="col-lg-4">
+          <h5>About</h5>
+          <p class="lead mb-0">BuyBest</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <div class="copyright py-4 text-center text-white">
+    <div class="container">
+      <small>Copyright © John Doe 2022</small>
+    </div>
+  </div>
+</body>
+</html>
+```
 
 ---
 
+### **4. Gallery Page (gallery.html)**
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Buy Best! - Gallery</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+  <link href="css/mystyle.css" rel="stylesheet">
+  <!-- Font Awesome icons -->
+  <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+</head>
+<body>
+  <!-- Navbar (same as others) -->
+  <nav class="navbar navbar-dark navbar-expand-sm fixed-top" style="background-color: darkblue;">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand mr-auto" href="index.html">
+        <img src="imgs/logo.png" width="85%" height="65%" alt="Logo">
+      </a>
+      <div class="collapse navbar-collapse" id="Navbar">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="aboutus.html"><span class="fa fa-list fa-lg"></span> About Us</a></li>
+          <li class="nav-item active"><a class="nav-link" href="gallery.html"><span class="fa fa-info fa-lg"></span> Products</a></li>
+          <li class="nav-item"><a class="nav-link" href="contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact Us</a></li>
+        </ul>
+      </div>
+      <span class="navbar-text">
+        <a data-toggle="modal" data-target="#loginModal"><span class="fa fa-sign-in"></span> Login</a>
+      </span>
+    </div>
+  </nav>
+
+  <!-- Login Modal (same as others) -->
+  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+         <div class="modal-header text-center">
+            <h4 class="modal-title w-100 font-weight-bold">Login</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+         </div>
+         <div class="modal-body mx-1">
+            <div class="md-form mb-1">
+              <i class="fas fa-envelope prefix grey-text"></i>
+              <input type="email" id="defaultForm-email" class="form-control validate">
+              <label for="defaultForm-email">Your email</label>
+            </div>
+            <div class="md-form mb-1">
+              <i class="fas fa-lock prefix grey-text"></i>
+              <input type="password" id="defaultForm-pass" class="form-control validate">
+              <label for="defaultForm-pass">Your password</label>
+            </div>
+         </div>
+         <div class="modal-footer d-flex justify-content-center">
+            <button class="btn btn-default">Login</button>
+         </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Gallery Content -->
+  <div class="container" style="margin-top:100px;">
+    <div class="row">
+      <div class="col-12">
+        <h3 class="display-4 text-center">Gallery</h3>
+      </div>
+    </div>
+    <div class="row">
+      <!-- Bootstrap grid: 12 images arranged in 4 columns per row -->
+      <div class="col-6 col-sm-3 mb-4">
+        <img src="imgs/1.jpg" class="img-fluid img-thumbnail" alt="Gallery Image 1">
+      </div>
+      <div class="col-6 col-sm-3 mb-4">
+        <img src="imgs/2.jpg" class="img-fluid img-thumbnail" alt="Gallery Image 2">
+      </div>
+      <div class="col-6 col-sm-3 mb-4">
+        <img src="imgs/3.jpg" class="img-fluid img-thumbnail" alt="Gallery Image 3">
+      </div>
+      <div class="col-6 col-sm-3 mb-4">
+        <img src="imgs/4.jpg" class="img-fluid img-thumbnail" alt="Gallery Image 4">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-6 col-sm-3 mb-4">
+        <img src="imgs/5.jpg" class="img-fluid img-thumbnail" alt="Gallery Image 5">
+      </div>
+      <div class="col-6 col-sm-3 mb-4">
+        <img src="imgs/6.jpg" class="img-fluid img-thumbnail" alt="Gallery Image 6">
+      </div>
+      <div class="col-6 col-sm-3 mb-4">
+        <img src="imgs/7.jpg" class="img-fluid img-thumbnail" alt="Gallery Image 7">
+      </div>
+      <div class="col-6 col-sm-3 mb-4">
+        <img src="imgs/8.jpg" class="img-fluid img-thumbnail" alt="Gallery Image 8">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-6 col-sm-3 mb-4">
+        <img src="imgs/9.jpg" class="img-fluid img-thumbnail" alt="Gallery Image 9">
+      </div>
+      <div class="col-6 col-sm-3 mb-4">
+        <img src="imgs/10.jpg" class="img-fluid img-thumbnail" alt="Gallery Image 10">
+      </div>
+      <div class="col-6 col-sm-3 mb-4">
+        <img src="imgs/11.jpg" class="img-fluid img-thumbnail" alt="Gallery Image 11">
+      </div>
+      <div class="col-6 col-sm-3 mb-4">
+        <img src="imgs/12.jpg" class="img-fluid img-thumbnail" alt="Gallery Image 12">
+      </div>
+    </div>
+  </div>
+
+  <!-- Footer (same as others) -->
+  <footer class="footer text-center mt-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 mb-5 mb-lg-0">
+          <h5>Location</h5>
+          <p class="lead mb-0">27 Jane Street, John Doe<br>TS 5000027</p>
+        </div>
+        <div class="col-lg-4 mb-5 mb-lg-0">
+          <h5>Around the Web</h5>
+          <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
+          <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
+          <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
+        </div>
+        <div class="col-lg-4">
+          <h5>About</h5>
+          <p class="lead mb-0">BuyBest</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <div class="copyright py-4 text-center text-white">
+    <div class="container">
+      <small>Copyright © John Doe 2022</small>
+    </div>
+  </div>
+</body>
+</html>
+```
+
+---
+
+### **Additional Notes:**
+
+- **Partners Page:** You can create a similar HTML file (e.g., partners.html) to showcase your partners. Use the same Navbar, header, and footer code structure for consistency.
+- **Folder Structure:** Ensure you have an `imgs` folder for your images and a `css` folder containing your custom CSS file (mystyle.css).
+- **Consistency:** All pages use the same external Bootstrap and Font Awesome CDNs. The login modal is replicated on every page so that users can log in from anywhere.
+- **Customization:** You can further customize the mystyle.css file to adjust margins, padding, fonts, and colors according to your design requirements.
+
+This complete set of pages fulfills Experiment 5 by providing a static e-commerce website structure with multiple pages, a gallery using the Bootstrap grid, a common Navbar and footer, and a Login link opening a modal.
+
+citeturn0file0
